--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,11 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
-  <link rel="stylesheet" href="bower_components/jasny-bootstrap/dist/css/jasny-bootstrap.css"/>
-  <link rel="stylesheet" href="bower_components/angular-material/angular-material.css"/>
-  <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.min.css"/>
-  <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css"/>
-
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/jasny-bootstrap/dist/css/jasny-bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+  <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.min.css" />
+  <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -34,63 +33,13 @@
 <body ng-app="oraj360">
 
 
-<md-content ng-cloak ng-controller="ProfileCtrl">
-  <div ng-if="isLogged">
-    <div id="header">
-      <div id="header-logo">
-        <img src="images/ordina-logo.png" alt="logo ordina"/>
-      </div>
-
-      <div id="header-menu" layout="row">
-        <md-menu md-offset="0 68">
-          <md-button ng-click="$mdOpenMenu()" aria-label="Open menu" id="menu-button">
-            <div id="menu-icon" style="background-image:url('http://lorempixel.com/100/100/');">
-              <ng-md-icon id="menu-dropdown" icon="expand_more"></ng-md-icon>
-            </div>
-
-          </md-button>
-          <md-menu-content width="4">
-            <md-menu-item>
-              <md-button>
-                <div layout="row">
-                  <p flex>Timeline</p>
-                </div>
-              </md-button>
-            </md-menu-item>
-            <md-menu-item>
-              <md-button ng-href="#/admin">
-                <div layout="row">
-                  <p flex>Admin</p>
-                </div>
-              </md-button>
-            </md-menu-item>
-            <md-menu-divider></md-menu-divider>
-            <md-menu-item ng-controller="LoginCtrl">
-              <md-button ng-click="logout()">
-                <div layout="row">
-                  <p flex>Logout</p>
-                </div>
-              </md-button>
-            </md-menu-item>
-          </md-menu-content>
-        </md-menu>
-      </div>
-    </div>
-    <div id="header-details" layout="row">
-      <div hide-sm style="background-image:url('http://lorempixel.com/300/300/');"></div>
-      <header>
-        <h1 class="md-title">{{myDetails.firstName}} {{myDetails.lastName}}</h1>
-
-        <p class="md-subhead">{{myDetails.unit}}</p>
-      </header>
-    </div>
-  </div>
-</md-content>
-
+<ng-header ng-show="auth.loggedIn===true"></ng-header>
 <div class="container" ng-cloak>
-  <div ng-view=""></div>
+  <div ng-view="">loading....</div>
 </div>
 </body>
+
+<script src="https://code.angularjs.org/tools/typescript.js"></script>
 
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
@@ -114,30 +63,54 @@
 <script src="bower_components/lodash/lodash.js"></script>
 <script src="bower_components/restangular/dist/restangular.js"></script>
 <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
+<script src="bower_components/traverson/browser/dist/traverson.js"></script>
+<script src="bower_components/traverson-hal/browser/dist/traverson-hal.js"></script>
+<script src="bower_components/traverson-angular/browser/dist/traverson-angular.js"></script>
 <!-- endbower -->
 
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.js"></script>
-<script type="text/javascript"
-        src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
-
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?libraries=places"></script>
+<script src="../bower_components/traverson/traverson.js"></script>
+<script src="../bower_components/traverson-hal/browser/dist/traverson-hal.js"></script>
 <!-- endbuild -->
 
 <!-- build:js({.tmp,src}) scripts/app.js -->
+
+<!--<script src="app/components/header.directive.js"></script>-->
+
+
+<!-- app files-->
 <script src="app/angular-locale_nl-be.js"></script>
-<script src="app/app.js"></script>
+<script src="app/app.module.js"></script>
+<script src="app/app.route.js"></script>
+
+<!-- Services -->
+<script src="app/services/timeline.service.js"></script>
+<script src="app/services/persons.service.js"></script>
+<script src="app/services/skills.service.js"></script>
+<script src="app/services/role.service.js"></script>
+<script src="app/services/auth.service.js"></script>
+<script src="app/services/customers.service.js"></script>
+<script src="app/services/person.service.js"></script>
+
+<!-- Controllers -->
+<script src="app/skills/skills.controller.js"></script>
+<script src="app/skills/skillCompetence.controller.js"></script>
+<script src="app/roles/role.controller.js"></script>
 <script src="app/timeline/dashboard.controller.js"></script>
 <script src="app/persons/profile.controller.js"></script>
 <script src="app/persons/persons.controller.js"></script>
-<script src="app/authentication/login.controller.js"></script>
-<script src="app/skills/skills.controller.js"></script>
-<script src="app/skills/skillCompetence.controller.js"></script>
 <script src="app/persons/panel.controller.js"></script>
 <script src="app/persons/customers.controller.js"></script>
 <script src="app/persons/management.controller.js"></script>
 <script src="app/persons/search.controller.js"></script>
 <script src="app/authentication/register.controller.js"></script>
+<script src="app/authentication/auth.controller.js"></script>
+<script src="app/authentication/header.controller.js"></script>
+<script src="app/persons/person.controller.js"></script>
+
+<!-- Components -->
 <script src="app/components/learning.directive.js"></script>
 <script src="app/components/experience.directive.js"></script>
 <script src="app/components/activity.directive.js"></script>
@@ -145,14 +118,11 @@
 <script src="app/components/about.directive.js"></script>
 <script src="app/components/inactivelist.directive.js"></script>
 <script src="app/components/interestinggroups.directive.js"></script>
-<script src="app/services/timeline.service.js"></script>
-<script src="app/services/persons.service.js"></script>
-<script src="app/services/skills.service.js"></script>
-<script src="app/services/role.service.js"></script>
-<script src="app/services/authenticate.service.js"></script>
-<script src="app/services/customers.service.js"></script>
 <script src="app/components/roles.directive.js"></script>
-<script src="app/roles/role.controller.js"></script>
+<script src="app/components/menuHeader.directive.js"></script>
+
 <!-- endbuild -->
+
+
 </html>
 
